stop fouc using no visibility to html at start of loading and changing that at the end of loading

--- a/src/style.css
+++ b/src/style.css
@@ -214,3 +214,8 @@ a:hover {
     border-radius: 50%;
     background-color: rgb(48, 54, 61);
 }
+
+html {
+    visibility: visible;
+    opacity: 1;
+}
